--- a/index.html
+++ b/index.html
@@ -1,13 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Portfoli</title>
 </head>
+
 <body>
-    <h2>El meu Porfoli</h2>
-    <p> Primer Repositori del curs del Tecnocampus </p>
+    <div class='container'>
+        <header>
+            <img src="imatges/persona 1.png" alt="icono usuari" class='imatge-header'>
+            <h1>Eduard Farinyes - Portfoli</h1>
+        </header>
+        <div class = 'principal'>
+            <aside>
+                <ul>
+                    <li>
+                        <img src="imatges/about 1.png" alt="Icono user" class='img-aside'>
+                        <h3>Qui soc</h3>
+                    </li>
+                    <li>
+                        <img src="imatges/student 1.png" alt="Icono Student">
+                        <h3>Què he après</h3>
+                    </li>
+                    <li>
+                        <img src="imatges/informacio 1.png" alt="Icono Info">
+                        <h3>Contacte</h3>
+                    </li>
+                </ul>
+            </aside>
+            <div class='projectes'>
+                <div class='projecte'>
+                    <h3>Projecte 1</h3>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Totam blanditiis incidunt nesciunt exercitationem eius similique cum vel minima sequi tempora
+                        dolores molestiae,
+                        quaerat repellat architecto perspiciatis libero non odio! Labore.
+                    </p>
+                    <img src="imatges/react.png" alt="react Logo" width="245" height="155">
+                </div>
+                <div class='projecte'>
+                    <h3>Projecte 2</h3>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Totam blanditiis incidunt nesciunt exercitationem eius similique cum vel minima sequi tempora
+                        dolores molestiae,
+                        quaerat repellat architecto perspiciatis libero non odio! Labore.
+                    </p>
+                    <img src="imatges/javaScript2 1.png" alt="Logo JS" width="155" height="155">
+                </div>
+                <div class='projecte'>
+                    <h3>Projecte 3</h3>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Totam blanditiis incidunt nesciunt exercitationem eius similique cum vel minima sequi tempora
+                        dolores molestiae,
+                        quaerat repellat architecto perspiciatis libero non odio! Labore.
+                    </p>
+                    <img src="imatges/node-js 1.png" alt="Logo Node" width="134" height="155">
+                </div>
+            </div>
+        </div>
+        <footer>
+            <p>Eduard Farinyes - Portfoli </p>
+            <img src="imatges/twitter 1.png" alt="El meu twitter"> <small>@elMeuTwitter</small>
+            <img src="imatges/linkedin 1.png" alt="El meu Linkedin"> <small>elMeuLinkedin</small>
+            <img src="imatges/email3 1.png" alt="El meu Correu"><small>Contacta</small>
+            <p>Mataró - 2022 </p>
+        </footer>
+
+    </div>
 </body>
+
 </html>
