--- a/quiSoc.html
+++ b/quiSoc.html
@@ -16,7 +16,9 @@
 <body>
     <div class='container'>
         <header>
-            <img src="imatges/persona_1.png" alt="icono usuari" class='imatge-header'>
+            <a href="index.html"> 
+                <img src="imatges/persona_1.png" alt="icono usuari" class='imatge-header'> 
+            </a>
             <h1>Eduard Farinyes - Portfoli</h1>
         </header>
         <hr>
@@ -25,7 +27,7 @@
 
                 <div class='aside-item'>
                     <!-- <img src="imatges/about 1.png" alt="Icono user" class='img-aside'> -->
-                    <a href="quiSoc.html"><h2>Qui soc</h2></a>
+                    <a href="#"><h2>Qui soc</h2></a>
                     
                     <i class="fa-solid fa-user"></i>
                 </div>
@@ -44,44 +46,29 @@
                     <i class="fa-solid fa-paper-plane"></i>
                 </div>
             </div>
-            <div class='projectes'>
-
-                <div class='projecte'>
-
-                    <h3>Projecte 1</h3>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Totam blanditiis incidunt nesciunt exercitationem eius similique cum vel minima sequi tempora
-                        dolores molestiae,
-                        quaerat repellat architecto perspiciatis libero non odio! Labore.
-                    </p>
-                    <div class='imatge-projecte'>
-                        <img src="imatges/reactLogo.png" alt="react Logo" class='react-image'>
-                    </div>
-
+            <div class='quisoc'>
+                <div class = 'userImage'>
+                    <img src="imatges/user1.png" alt="foto User" class = 'imgUser'>
                 </div>
-                <div class='projecte'>
-                    <h3>Projecte 2</h3>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Totam blanditiis incidunt nesciunt exercitationem eius similique cum vel minima sequi tempora
-                        dolores molestiae,
-                        quaerat repellat architecto perspiciatis libero non odio! Labore.
+                <div class = 'curriculum'>
+                    <p> <span>Lorem</span>  ipsum dolor sit amet, consectetur adipiscing elit. Etiam risus eros, lobortis eget dictum eu, dictum a leo. 
+                        Vestibulum consectetur est in ornare fringilla. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam risus nisl, 
+                        congue et libero sit amet, mattis elementum magna. Sed non tellus sit amet enim interdum interdum. Suspendisse sed nibh sed lacus pharetra sodales. 
+                        Nulla a pellentesque neque, id maximus erat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Donec interdum accumsan est, ut ultricies dolor accumsan ac. 
                     </p>
-                    <div class="imatge-projecte">
-                        <img src="imatges/javaScript2 1.png" alt="Logo JS" class='javascript-image'>
-                    </div>
-
-                </div>
-                <div class='projecte'>
-                    <h3>Projecte 3</h3>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Totam blanditiis incidunt nesciunt exercitationem eius similique cum vel minima sequi tempora
-                        dolores molestiae,
-                        quaerat repellat architecto perspiciatis libero non odio! Labore.
+                    <p> <span>Quisque</span>  euismod sodales metus, at posuere turpis tincidunt aliquet. Duis ligula neque, vestibulum eu feugiat vel, vehicula sit amet sapien. 
+                        In facilisis quam ut nisl luctus, eget sagittis quam vulputate. 
+                        In auctor eros id dolor iaculis, id rhoncus lorem mattis. Duis sit amet fringilla orci, at laoreet ligula. Cras et ligula ipsum. 
+                        Nullam vel diam viverra, aliquet dui et, hendrerit tortor. 
+                        Donec ac congue tellus. Maecenas ut cursus mauris. Sed eleifend ut dui a tristique. 
                     </p>
-                    <div class="imatge-projecte">
-                        <img src="imatges/node-js 1.png" alt="Logo Node" class='node-image'>
-                    </div>
-
+                    <p> <span>Maecenas</span>  at sapien urna. Praesent ullamcorper molestie purus, et venenatis purus consectetur et. Aenean efficitur ac justo id finibus. 
+                        Praesent vitae pharetra sem. Nulla lobortis ex et purus imperdiet, in ullamcorper elit porttitor. 
+                        Donec sem nisl, consectetur quis vehicula non, rutrum nec metus. Curabitur id est eget augue mollis laoreet. 
+                        Sed ac ultrices diam. 
+                        Nam in ipsum dapibus, blandit diam sit amet, suscipit felis. Maecenas tellus mi, commodo non elit id, bibendum elementum sem. 
+                    </p>
                 </div>
             </div>
         </div>
@@ -89,6 +76,7 @@
         <footer class='footer'>
             <h3>
                 <a href="index.html" class='footer'>Eduard Farinyes - Portfoli </a>
+                
             </h3>
             <div class="footer footer-social">
                 <img src="imatges/twitter 1.png" alt="El meu twitter"> <small>@elMeuTwitter</small>
