Commit - Afegit formulari

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class='aside-item'>
                     <!-- <img src="imatges/informacio 1.png" alt="Icono Info"> -->
                     
-                    <a href="#"><h2>Contacte</h2></a>
+                    <a href="contacte.html"><h2>Contacte</h2></a>
                     <i class="fa-solid fa-paper-plane"></i>
                 </div>
             </div>
