--- a/contacte.html
+++ b/contacte.html
@@ -8,8 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-        rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -54,23 +55,24 @@
             </div>
 
             <div class='contacte'>
-                <h2> Demana Informació </h2>
+                <h1> Demana Informació </h1>
                 <div class='formulari'>
                     <form action="https://formcarry.com/s/f6LspnHD_oZ" method="POST" accept-charset="UTF-8"
                         target="_blank" class='forms-estils'>
-                    <div class = 'items-form'>
+
+                    <div class = 'items-form-nom'>
                         <label for="nom">Nom</label>
                         <input type="text" name='nom' placeholder="El teu nom">
                         <br>
                     </div>
                         
-                    <div class = 'items-form'>
+                    <div class = 'items-form-cognom'>
                         <label for="cognom">Cognom</label>
                         <input type="text" name='cognom' placeholder="El teu cognom">
                         <br>
                     </div>
                         
-                    <div class = 'items-form'>
+                    <div class = 'items-form-correu'>
                         <label for="email"> Correu </label>
                         <input type="email" placeholder="El teu correu">
                         <br>
@@ -80,7 +82,7 @@
                             placeholder="Escriu un comentari">
                         </textarea>
                         <br>
-                        <input type="submit" value='Envia'>
+                        <input type="submit" value='Envia' class = 'btn-input'>
                     </form>
                 </div>
             </div>
