--- a/quiSoc.html
+++ b/quiSoc.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Portfoli</title>
 </head>
@@ -27,7 +28,7 @@
 
                 <div class='aside-item'>
                     <!-- <img src="imatges/about 1.png" alt="Icono user" class='img-aside'> -->
-                    <a href="#"><h2>Qui soc</h2></a>
+                    <a href="quiSoc.html"><h2>Qui soc</h2></a>
                     
                     <i class="fa-solid fa-user"></i>
                 </div>
@@ -42,7 +43,7 @@
                 <div class='aside-item'>
                     <!-- <img src="imatges/informacio 1.png" alt="Icono Info"> -->
                     
-                    <a href="#"><h2>Contacte</h2></a>
+                    <a href="contacte.html"><h2>Contacte</h2></a>
                     <i class="fa-solid fa-paper-plane"></i>
                 </div>
             </div>
