Commit - Estudis i css afegits

--- a/contacte.html
+++ b/contacte.html
@@ -20,7 +20,9 @@
 <body>
     <div class='container'>
         <header>
-            <img src="imatges/persona_1.png" alt="icono usuari" class='imatge-header'>
+            <a href="index.html"> 
+                <img src="imatges/persona_1.png" alt="icono usuari" class='imatge-header'>
+            </a>
             <h1>Eduard Farinyes - Portfoli</h1>
         </header>
         <hr>
@@ -38,7 +40,7 @@
                 <div class='aside-item'>
                     <!-- <img src="imatges/student 1.png" alt="Icono Student"> -->
 
-                    <a href="#">
+                    <a href="estudis.html">
                         <h2>Què he après</h2>
                     </a>
                     <i class="fa-solid fa-graduation-cap"></i>
