--- a/quiSoc.html
+++ b/quiSoc.html
@@ -28,7 +28,7 @@
 
                 <div class='aside-item'>
                     <!-- <img src="imatges/about 1.png" alt="Icono user" class='img-aside'> -->
-                    <a href="quiSoc.html"><h2>Qui soc</h2></a>
+                    <a href="#"><h2>Qui soc</h2></a>
                     
                     <i class="fa-solid fa-user"></i>
                 </div>
@@ -36,7 +36,7 @@
                 <div class='aside-item'>
                     <!-- <img src="imatges/student 1.png" alt="Icono Student"> -->
                     
-                    <a href="#"> <h2>Què he après</h2> </a>
+                    <a href="estudis.html"> <h2>Què he après</h2> </a>
                     <i class="fa-solid fa-graduation-cap"></i>
                 </div>
 
