--- a/estudis.html
+++ b/estudis.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="estudis.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet"> -->
@@ -15,9 +16,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Portfoli</title>
 </head>
-
 <body>
-    <div class='container'>
+    <div class="container">
         <header>
             <a href="index.html"> 
                 <img src="imatges/persona_1.png" alt="icono usuari" class='imatge-header'>
@@ -25,7 +25,7 @@
             <h1>Eduard Farinyes - Portfoli</h1>
         </header>
         <hr>
-        <div class='principal'>
+        <div class="principal">
             <div class='aside'>
 
                 <div class='aside-item'>
@@ -55,51 +55,46 @@
                     <i class="fa-solid fa-paper-plane"></i>
                 </div>
             </div>
-            <div class='projectes'>
-
-                <div class='projecte'>
-
-                    <h3>Projecte 1</h3>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Totam blanditiis incidunt nesciunt exercitationem eius similique cum vel minima sequi tempora
-                        dolores molestiae,
-                        quaerat repellat architecto perspiciatis libero non odio! Labore.
-                    </p>
-                    <div class='imatge-projecte'>
-                        <img src="imatges/reactLogo.png" alt="react Logo" class='react-image'>
+            <div class = 'quisoc'>
+                <h1>Els meus estudis</h1>
+                <div class="estudis">
+                    <div class="estudi">
+                        <img src="imatges/reactLogo.png" alt="Logo React">
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                            <li>Cras pellentesque urna euismod orci finibus maximus.</li>
+                            <li>Nullam quis quam tempor, auctor risus sed, consectetur augue.</li>
+                            <li>Fusce euismod erat in viverra hendrerit.</li>
+                        </ul>
                     </div>
-
-                </div>
-                <div class='projecte'>
-                    <h3>Projecte 2</h3>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Totam blanditiis incidunt nesciunt exercitationem eius similique cum vel minima sequi tempora
-                        dolores molestiae,
-                        quaerat repellat architecto perspiciatis libero non odio! Labore.
-                    </p>
-                    <div class="imatge-projecte">
-                        <img src="imatges/javaScript2 1.png" alt="Logo JS" class='javascript-image'>
+                    <div class="estudi">
+                        <img src="imatges/node-js 1.png" alt="Logo NodeJs"> 
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                            <li>Cras pellentesque urna euismod orci finibus maximus.</li>
+                            <li>Nullam quis quam tempor, auctor risus sed, consectetur augue.</li>
+                            <li>Fusce euismod erat in viverra hendrerit.</li>
+                        </ul>
                     </div>
-
-                </div>
-                <div class='projecte'>
-                    <h3>Projecte 3</h3>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Totam blanditiis incidunt nesciunt exercitationem eius similique cum vel minima sequi tempora
-                        dolores molestiae,
-                        quaerat repellat architecto perspiciatis libero non odio! Labore.
-                    </p>
-                    <div class="imatge-projecte">
-                        <img src="imatges/node-js 1.png" alt="Logo Node" class='node-image'>
+                    <div class="estudi">
+                        <img src="imatges/javaScript.png" alt="Logo JavaScript" >
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                            <li>Cras pellentesque urna euismod orci finibus maximus.</li>
+                            <li>Nullam quis quam tempor, auctor risus sed, consectetur augue.</li>
+                            <li>Fusce euismod erat in viverra hendrerit.</li>
+                        </ul>
                     </div>
-
+                    
                 </div>
+
             </div>
         </div>
         <hr>
         <footer class='footer'>
             <h3>
                 <a href="index.html" class='footer'>Eduard Farinyes - Portfoli </a>
+                
             </h3>
             <div class="footer footer-social">
                 <img src="imatges/twitter 1.png" alt="El meu twitter"> <small>@elMeuTwitter</small>
@@ -109,8 +104,5 @@
 
             <h3>Mataró - 2022 </h3>
         </footer>
-
     </div>
 </body>
-
-</html>
