Commit - Arreglan estils responsive

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet"> -->
-    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -19,7 +18,7 @@
 <body>
     <div class='container'>
         <header>
-            <a href="index.html"> 
+            <a href="index.html">
                 <img src="imatges/persona_1.png" alt="icono usuari" class='imatge-header'>
             </a>
             <h1>Eduard Farinyes - Portfoli</h1>
@@ -56,7 +55,6 @@
                 </div>
             </div>
             <div class='projectes'>
-
                 <div class='projecte'>
 
                     <h3>Projecte 1</h3>
@@ -82,7 +80,7 @@
                     </div>
 
                 </div>
-                <div class='projecte'>
+                <div class='projecte' id = 'projecte-final'>
                     <h3>Projecte 3</h3>
                     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Totam blanditiis incidunt nesciunt exercitationem eius similique cum vel minima sequi tempora
@@ -92,7 +90,6 @@
                     <div class="imatge-projecte">
                         <img src="imatges/node-js 1.png" alt="Logo Node" class='node-image'>
                     </div>
-
                 </div>
             </div>
         </div>
