--- a/contacte.html
+++ b/contacte.html
@@ -7,10 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="contacte.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-        rel="stylesheet"> -->
-    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -20,7 +19,7 @@
 <body>
     <div class='container'>
         <header>
-            <a href="index.html"> 
+            <a href="index.html">
                 <img src="imatges/persona_1.png" alt="icono usuari" class='imatge-header'>
             </a>
             <h1>Eduard Farinyes - Portfoli</h1>
@@ -60,7 +59,7 @@
                 <h1> <i>Demana Informació</i> </h1>
                 <div class='formulari'>
                     <form action="https://formcarry.com/s/f6LspnHD_oZ" method="POST" accept-charset="UTF-8"
-                        target="_blank" class='forms-estils'>
+                        target="_blank">
 
                         <div class='items-form-nom'>
                             <label for="nom">Nom</label>
