--- a/estudis.html
+++ b/estudis.html
@@ -9,17 +9,18 @@
     <link rel="stylesheet" href="estudis.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet"> -->
-    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Portfoli</title>
 </head>
+
 <body>
     <div class="container">
         <header>
-            <a href="index.html"> 
+            <a href="index.html">
                 <img src="imatges/persona_1.png" alt="icono usuari" class='imatge-header'>
             </a>
             <h1>Eduard Farinyes - Portfoli</h1>
@@ -55,7 +56,7 @@
                     <i class="fa-solid fa-paper-plane"></i>
                 </div>
             </div>
-            <div class = 'quisoc'>
+            <div class='quisoc'>
                 <h1>Els meus estudis</h1>
                 <div class="estudis">
                     <div class="estudi">
@@ -68,7 +69,7 @@
                         </ul>
                     </div>
                     <div class="estudi">
-                        <img src="imatges/node-js 1.png" alt="Logo NodeJs"> 
+                        <img src="imatges/node-js 1.png" alt="Logo NodeJs">
                         <ul>
                             <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
                             <li>Cras pellentesque urna euismod orci finibus maximus.</li>
@@ -77,7 +78,7 @@
                         </ul>
                     </div>
                     <div class="estudi">
-                        <img src="imatges/javaScript.png" alt="Logo JavaScript" >
+                        <img src="imatges/javaScript.png" alt="Logo JavaScript">
                         <ul>
                             <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
                             <li>Cras pellentesque urna euismod orci finibus maximus.</li>
@@ -85,7 +86,7 @@
                             <li>Fusce euismod erat in viverra hendrerit.</li>
                         </ul>
                     </div>
-                    
+
                 </div>
 
             </div>
@@ -94,7 +95,7 @@
         <footer class='footer'>
             <h3>
                 <a href="index.html" class='footer'>Eduard Farinyes - Portfoli </a>
-                
+
             </h3>
             <div class="footer footer-social">
                 <img src="imatges/twitter 1.png" alt="El meu twitter"> <small>@elMeuTwitter</small>
