--- a/contacte.html
+++ b/contacte.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="contacte.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="contacte.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Contacte</title>
-</head>
+  </head>
 
-<body>
-    <div class='container'>
+  <body>
+    <div class="container">
         <header>
             <a href="index.html">
                 <img src="imatges/persona_1.png" alt="icono usuari" class='imatge-header'>
@@ -25,7 +31,7 @@
             <h1>Eduard Farinyes - Portfoli</h1>
         </header>
         <hr>
-        <div class='principal'>
+        <div class="principal">
             <div class='aside'>
 
                 <div class='aside-item'>
@@ -33,6 +39,7 @@
                     <a href="quiSoc.html">
                         <h2>Qui soc</h2>
                     </a>
+
                     <i class="fa-solid fa-user"></i>
                 </div>
 
@@ -48,59 +55,65 @@
                 <div class='aside-item'>
                     <!-- <img src="imatges/informacio 1.png" alt="Icono Info"> -->
 
-                    <a href="#">
+                    <a href="contacte.html">
                         <h2>Contacte</h2>
                     </a>
                     <i class="fa-solid fa-paper-plane"></i>
                 </div>
             </div>
-
-            <div class='contacte'>
-                <h1> <i>Demana Informació</i> </h1>
-                <div class='formulari'>
-                    <form action="https://formcarry.com/s/f6LspnHD_oZ" method="POST" accept-charset="UTF-8"
-                        target="_blank">
-
-                        <div class='items-form-nom'>
-                            <label for="nom">Nom</label>
-                            <input type="text" name='nom' placeholder="El teu nom">
-                            <br>
-                        </div>
-
-                        <div class='items-form-cognom'>
-                            <label for="cognom">Cognom</label>
-                            <input type="text" name='cognom' placeholder="El teu cognom">
-                            <br>
-                        </div>
-
-                        <div class='items-form-correu'>
-                            <label for="email"> Correu </label>
-                            <input type="email" placeholder="El teu correu">
-                            <br>
-                        </div>
-
-                        <textarea name="form" id="form" cols="30" rows="10" placeholder="Escriu un comentari">
-                        </textarea>
+            <div class="contacte">
+                <h1><i>Demana Informació</i></h1>
+                <div class="formulari">
+                    <form
+                        action="https://formcarry.com/s/f6LspnHD_oZ"
+                        method="POST"
+                        accept-charset="UTF-8"
+                        target="_blank"
+                    >
+                    <div class="items-form-nom">
+                        <label for="nom">Nom</label>
+                        <input type="text" name="nom" placeholder="El teu nom" />
                         <br>
-                        <input type="submit" value='Envia' class='btn-input'>
-                    </form>
+                    </div>
+                    <div class="items-form-cognom">
+                        <label for="cognom">Cognom</label>
+                        <input type="text" name="cognom" placeholder="El teu cognom" />
+                        <br />
+                    </div>
+                    <div class="items-form-correu">
+                        <label for="email"> Correu </label>
+                        <input type="email" placeholder="El teu correu" />
+                        <br />
+                    </div>
+                    <textarea
+                        name="form"
+                        id="form"
+                        cols="30"
+                        rows="10"
+                        placeholder="Escriu un comentari"
+                    >
+                    </textarea>
+                    <br />
+                    <input type="submit" value="Envia" class="btn-input" />
                 </div>
             </div>
         </div>
-        <footer class='footer'>
+        <footer class="footer">
             <h3>
-                <a href="index.html" class='footer'>Eduard Farinyes - Portfoli </a>
+              <a href="index.html" class="footer">Eduard Farinyes - Portfoli </a>
             </h3>
             <div class="footer footer-social">
-                <img src="imatges/twitter 1.png" alt="El meu twitter"> <small>@elMeuTwitter</small>
-                <img src="imatges/linkedin 1.png" alt="El meu Linkedin"> <small>elMeuLinkedin</small>
-                <img src="imatges/email3 1.png" alt="El meu Correu"><small>Contacta</small>
+              <img src="imatges/twitter 1.png" alt="El meu twitter" />
+              <small>@elMeuTwitter</small>
+              <img src="imatges/linkedin 1.png" alt="El meu Linkedin" />
+              <small>elMeuLinkedin</small>
+              <img src="imatges/email3 1.png" alt="El meu Correu" /><small
+                >Contacta</small
+              >
             </div>
-
-            <h3>Mataró - 2022 </h3>
-        </footer>
-
+    
+            <h3>Mataró - 2022</h3>
+          </footer>
     </div>
-</body>
-
+  </body>
 </html>
