Commit - Afegint animacions i transcisions

--- a/contacte.html
+++ b/contacte.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="contacte.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap"
@@ -21,7 +21,6 @@
     />
     <title>Contacte</title>
   </head>
-
   <body>
     <div class="container">
         <header>
@@ -33,7 +32,7 @@
         <hr>
         <div class="principal">
             <div class='aside'>
-
+                
                 <div class='aside-item'>
                     <!-- <img src="imatges/about 1.png" alt="Icono user" class='img-aside'> -->
                     <a href="quiSoc.html">
@@ -95,6 +94,7 @@
                     </textarea>
                     <br />
                     <input type="submit" value="Envia" class="btn-input" />
+                    </form>
                 </div>
             </div>
         </div>
@@ -115,5 +115,6 @@
             <h3>Mataró - 2022</h3>
           </footer>
     </div>
+    
   </body>
 </html>
