--- a/quiSoc.html
+++ b/quiSoc.html
@@ -24,6 +24,9 @@
         <hr>
         <div class='principal'>
             <div class='aside'>
+                <div class="toggle">
+                    <i class = 'fa fa-bars'></i>
+                </div>
 
                 <div class='aside-item'>
                     <!-- <img src="imatges/about 1.png" alt="Icono user" class='img-aside'> -->
