--- a/estudis.html
+++ b/estudis.html
@@ -1,110 +1,132 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="estudis.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="estudis.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Portfoli</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <header>
-            <a href="index.html">
-                <img src="imatges/persona_1.png" alt="icono usuari" class='imatge-header'>
+      <header>
+        <a href="index.html">
+          <img
+            src="imatges/persona_1.png"
+            alt="icono usuari"
+            class="imatge-header"
+          />
+        </a>
+        <h1>Eduard Farinyes - Portfoli</h1>
+      </header>
+      <hr />
+      <div class="principal">
+        <div class="aside">
+          <div class="aside-item">
+            <!-- <img src="imatges/about 1.png" alt="Icono user" class='img-aside'> -->
+            <a href="quiSoc.html">
+              <h2>Qui soc</h2>
             </a>
-            <h1>Eduard Farinyes - Portfoli</h1>
-        </header>
-        <hr>
-        <div class="principal">
-            <div class='aside'>
-               
 
-                <div class='aside-item'>
-                    <!-- <img src="imatges/about 1.png" alt="Icono user" class='img-aside'> -->
-                    <a href="quiSoc.html">
-                        <h2>Qui soc</h2>
-                    </a>
+            <i class="fa-solid fa-user"></i>
+          </div>
 
-                   
-                </div>
+          <div class="aside-item">
+            <!-- <img src="imatges/student 1.png" alt="Icono Student"> -->
 
-                <div class='aside-item'>
-                    <!-- <img src="imatges/student 1.png" alt="Icono Student"> -->
+            <a href="estudis.html">
+              <h2>Què he après</h2>
+            </a>
+            <i class="fa-solid fa-graduation-cap"></i>
+          </div>
 
-                    <a href="estudis.html">
-                        <h2>Què he après</h2>
-                    </a>
-                    <i class="fa-solid fa-graduation-cap"></i>
-                </div>
+          <div class="aside-item">
+            <!-- <img src="imatges/informacio 1.png" alt="Icono Info"> -->
 
-                <div class='aside-item'>
-                    <!-- <img src="imatges/informacio 1.png" alt="Icono Info"> -->
-
-                    <a href="contacte.html">
-                        <h2>Contacte</h2>
-                    </a>
-                    <i class="fa-solid fa-paper-plane"></i>
-                </div>
-            </div>
-            <div class='quisoc'>
-                <h1>Els meus estudis</h1>
-                <div class="estudis">
-                    <div class="estudi">
-                        <img src="imatges/reactLogo.png" alt="Logo React">
-                        <ul>
-                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                            <li>Cras pellentesque urna euismod orci finibus maximus.</li>
-                            <li>Nullam quis quam tempor, auctor risus sed, consectetur augue.</li>
-                            <li>Fusce euismod erat in viverra hendrerit.</li>
-                        </ul>
-                    </div>
-                    <div class="estudi">
-                        <img src="imatges/node-js 1.png" alt="Logo NodeJs">
-                        <ul>
-                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                            <li>Cras pellentesque urna euismod orci finibus maximus.</li>
-                            <li>Nullam quis quam tempor, auctor risus sed, consectetur augue.</li>
-                            <li>Fusce euismod erat in viverra hendrerit.</li>
-                        </ul>
-                    </div>
-                    <div class="estudi">
-                        <img src="imatges/javaScript.png" alt="Logo JavaScript">
-                        <ul>
-                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                            <li>Cras pellentesque urna euismod orci finibus maximus.</li>
-                            <li>Nullam quis quam tempor, auctor risus sed, consectetur augue.</li>
-                            <li>Fusce euismod erat in viverra hendrerit.</li>
-                        </ul>
-                    </div>
-
-                </div>
-
-            </div>
+            <a href="contacte.html">
+              <h2>Contacte</h2>
+            </a>
+            <i class="fa-solid fa-paper-plane"></i>
+          </div>
         </div>
-        <hr>
-        <footer class='footer'>
-            <h3>
-                <a href="index.html" class='footer'>Eduard Farinyes - Portfoli </a>
-
-            </h3>
-            <div class="footer footer-social">
-                <img src="imatges/twitter 1.png" alt="El meu twitter"> <small>@elMeuTwitter</small>
-                <img src="imatges/linkedin 1.png" alt="El meu Linkedin"> <small>elMeuLinkedin</small>
-                <img src="imatges/email3 1.png" alt="El meu Correu"><small>Contacta</small>
+        <div class="quisoc">
+          <h1>Els meus estudis</h1>
+          <div class="estudis">
+            <div class="estudi">
+              <img src="imatges/reactLogo.png" alt="Logo React" />
+              <ul>
+                <li>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </li>
+                <li>Cras pellentesque urna euismod orci finibus maximus.</li>
+                <li>
+                  Nullam quis quam tempor, auctor risus sed, consectetur augue.
+                </li>
+                <li>Fusce euismod erat in viverra hendrerit.</li>
+              </ul>
             </div>
+            <div class="estudi">
+              <img src="imatges/node-js 1.png" alt="Logo NodeJs" />
+              <ul>
+                <li>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </li>
+                <li>Cras pellentesque urna euismod orci finibus maximus.</li>
+                <li>
+                  Nullam quis quam tempor, auctor risus sed, consectetur augue.
+                </li>
+                <li>Fusce euismod erat in viverra hendrerit.</li>
+              </ul>
+            </div>
+            <div class="estudi">
+              <img src="imatges/javaScript.png" alt="Logo JavaScript" />
+              <ul>
+                <li>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </li>
+                <li>Cras pellentesque urna euismod orci finibus maximus.</li>
+                <li>
+                  Nullam quis quam tempor, auctor risus sed, consectetur augue.
+                </li>
+                <li>Fusce euismod erat in viverra hendrerit.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <footer class="footer">
+        <h3>
+          <a href="index.html" class="footer">Eduard Farinyes - Portfoli </a>
+        </h3>
+        <div class="footer footer-social">
+          <img src="imatges/twitter 1.png" alt="El meu twitter" />
+          <small>@elMeuTwitter</small>
+          <img src="imatges/linkedin 1.png" alt="El meu Linkedin" />
+          <small>elMeuLinkedin</small>
+          <img src="imatges/email3 1.png" alt="El meu Correu" /><small
+            >Contacta</small
+          >
+        </div>
 
-            <h3>Mataró - 2022 </h3>
-        </footer>
+        <h3>Mataró - 2022</h3>
+      </footer>
     </div>
-</body>
+  </body>
+</html>
