Commit - Afegint detalls finals

--- a/quiSoc.html
+++ b/quiSoc.html
@@ -31,6 +31,13 @@
             class="imatge-header"
           />
         </a>
+        <div class="itemsHeader">
+          <h5>Exercici de maquetació amb HTML i CSS - Contingut falç</h5>
+          <h6>
+            No s'han utilitzat llibreries de tercers ja que l'objectiu era
+            aprendre a usar HTML i CSS
+          </h6>
+        </div>
         <h1>Eduard Farinyes - Portfoli</h1>
       </header>
       <hr />
