Commit - Ultims detalls

--- a/contacte.html
+++ b/contacte.html
@@ -41,7 +41,7 @@
         <h1>Eduard Farinyes - Portfoli</h1>
       </header>
       <hr />
-      <div class="principal">
+      <section class="principal">
         <div class="aside">
           <div class="aside-item">
             <!-- <img src="imatges/about 1.png" alt="Icono user" class='img-aside'> -->
@@ -108,7 +108,7 @@
             </form>
           </div>
         </div>
-      </div>
+      </section>
       <footer class="footer">
         <h3>
           <a href="index.html" class="footer">Eduard Farinyes - Portfoli </a>
