--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h1>Eduard Farinyes - Portfoli</h1>
       </header>
       <hr />
-      <div class="principal">
+      <section class="principal">
         <div class="aside">
           <div class="aside-item">
             <!-- <img src="imatges/about 1.png" alt="Icono user" class='img-aside'> -->
@@ -121,7 +121,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
       <hr />
       <footer class="footer">
         <h3>
