--- a/quiSoc.html
+++ b/quiSoc.html
@@ -41,7 +41,7 @@
         <h1>Eduard Farinyes - Portfoli</h1>
       </header>
       <hr />
-      <div class="principal">
+      <section class="principal">
         <div class="aside">
           <div class="aside-item">
             <!-- <img src="imatges/about 1.png" alt="Icono user" class='img-aside'> -->
@@ -102,7 +102,8 @@
             </p>
           </div>
         </div>
-      </div>
+      </section>
+      >
       <hr />
       <footer class="footer">
         <h3>
